@@ -265,10 +265,10 @@ module Hint =
     let datacons_contains_env_fv loc c x tx =
         H 3 loc Normal "datatype %s defines a data constructor %s whose type %O has type variables that cannot be generalized" c x tx
 
-    let scoped_tyvars_wont_be_generalized loc αs =
-        H 4 loc Min "scoped type variable%s %s will not be generalized" (if Set.count αs > 1 then "s" else "") (flatten_stringables ", " αs)
+    let scoped_vars_wont_be_generalized loc what scoped_vars =
+        H 4 loc Min "scoped %s variable%s %s will not be generalized" what (if Seq.length scoped_vars > 1 then "s" else "") (flatten_stringables ", " scoped_vars)
 
-    let auto_generalization_occurred_in_annotation loc t t' =
+    let auto_generalization_occurred loc t t' =
         H 5 loc Low "type annotation %O has been automatically generalized to %O" t t'
 
     let type_annotation_is_instantiation loc tann ϕinf =
